# bhmarketer-crypto-pr

./: .gitignore  .npmignore  .zenodo.json  LICENSE  README.md  calculator.py  index.ts  mkdocs.yml  package-lock.json  package.json  pyproject.toml  schema.jsonld  status.txt  tsconfig.json
.github/workflows/: heartbeat.yml
dataset/: HF_README.md  README.md  dataset-metadata.json  reach_benchmarks.csv
docs/: index.md
kaggle/: notebook.ipynb
